syntax = "proto3";

option java_package = "com.flipkart.protobuf.ext.example.search";
option java_multiple_files = true;

message SearchRequest {
    string query = 1;
    int32 page_number = 2;
    int32 result_per_page = 3;
}